Added jekyll based web site for gh-pages, which is http://openseizuredetector.org.uk.y

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,11 @@
     </head>
 
     <body>
-        <header>
+      <a href="https://github.com/jones139/OpenSeizureDetector">
+	<img style="position: absolute; top: 0; right: 0; border: 0;" 
+	     src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png" alt="Fork me on GitHub">
+      </a>     
+      <header>
             <h1><a href="{{site.baseurl}}/">Welcome to {{ site.name }}</a></h1>
                 <h4>{{ site.description }}</h4>
             <hr />
@@ -24,7 +28,7 @@
 
         <nav>
 
-            <h3>First Heading</h3>
+            <h3>Main Menu</h3>
 
             <ul>
                 <li><i class="icon-home"></i>   <a href="{{site.baseurl}}/">Home</a></li>
@@ -33,12 +37,22 @@
                 <li><i class="icon-rss"></i>    <a href="{{site.baseurl}}/feed.xml">RSS Feed</a></li>
             </ul>
 
-            <h3>Second Heading</h3>
+            <h3>Useful Pages</h3>
 
             <ul>
-                <li><i class="icon-link"></i>   <a href="#">Link 1</a></li>
-                <li><i class="icon-link"></i>   <a href="#">Link 2</a></li>
-                <li><i class="icon-link"></i>   <a href="#">Link 3</a></li>
+                <li>
+		  <i class="icon-link"></i>   
+		  <a href="{{site.baseurl}}/meta/2014/01/13/About_Benjamin/">About Benjamin</a></li>
+                <li>
+		  <i class="icon-link"></i>   
+		  <a href="{{site.baseurl}}/meta/2014/01/13/Digital_Video_Monitors/">Digital Video Monitors</a></li>
+		<li>
+		  <i class="icon-link"></i>   
+		  <a href="{{site.baseurl}}/meta/2014/01/13/Kinect_Seizure_Detector/">Kinect Based Seizure Detector Prototype</a>
+		</li>
+                <li>
+		  <i class="icon-link"></i>   
+		  <a href="{{site.baseurl}}/meta/2014/01/13/Source_Code/">Source Code</a></li>
             </ul>
         </nav>
 
