--- a/style.css
+++ b/style.css
@@ -1,3 +1,16 @@
+.img_small {
+    width:100px;
+}
+
+.img_med {
+    width:300px;
+}
+
+.img_large {
+    width:600px;
+}
+
+
 body {
     font-size: 12px;
     font-family: Verdana, Arial, SunSans-Regular, Sans-Serif;
@@ -133,3 +146,4 @@ article header h2 {
 section address {
     margin-left: 15px;
 }
+
