Added similar projects and accelerometer version pages.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,6 +47,10 @@
 		  <i class="icon-link"></i>   
 		  <a href="{{site.baseurl}}/meta/2014/01/13/Kinect_Seizure_Detector/">Kinect Based Seizure Detector Prototype</a>
 		</li>
+		<li>
+		  <i class="icon-link"></i>   
+		  <a href="{{site.baseurl}}/Meta/2014/02/21/Accelerometer_Version/">Accelerometer Based Seizure Detector Prototype</a>
+		</li>
                 <li>
 		  <i class="icon-link"></i>   
 		  <a href="{{site.baseurl}}/meta/2014/01/13/Source_Code/">Source Code</a></li>
