--- a/style.css
+++ b/style.css
@@ -130,7 +130,7 @@ article .entry img {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 100%;
+    #width: 100%;
 }
 
 article header span {
