--- a/kinect_version/bentv_android/res/menu/action_bar.xml
+++ b/kinect_version/bentv_android/res/menu/action_bar.xml
@@ -1,14 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android" 
       >
-   <item android:id="@+id/action_search"
+    <item android:id="@+id/action_settings"
           android:icon="@drawable/abc_ic_go"
-          android:title="action_search"
-	  android:showAsAction="ifRoom|withText"
-	  />
-    <item android:id="@+id/action_compose"
-          android:icon="@drawable/abc_ic_go"
-          android:title="action_compose" 
+          android:title="Settings" 
 	  android:showAsAction="ifRoom|withText"
 	  />    
     <item android:id="@+id/movecamera_1"
