Removed raw image from android app main screen so the masked image and chart are bigger.

--- a/kinect_version/bentv_android/res/layout/bentv_table_layout.xml
+++ b/kinect_version/bentv_android/res/layout/bentv_table_layout.xml
@@ -12,12 +12,13 @@
 	      android:layout_column="0" />
 	</TableRow>
 	<TableRow>
-	  <ImageView
+<!--	  <ImageView
               android:id="@+id/rawImgView"
 	      android:layout_weight="1"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:src="@drawable/raw_img" />
+-->
 	  <ImageView
               android:id="@+id/maskedImgView"
 	      android:layout_weight="1"
