Added a 'view webcam' button to android action bar - doesn't work - mediaplayer gives a 'cannot play this video' message...

--- a/kinect_version/bentv_android/res/menu/action_bar.xml
+++ b/kinect_version/bentv_android/res/menu/action_bar.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android" 
       >
+    <item android:id="@+id/action_webcam"
+          android:icon="@drawable/abc_ic_go"
+          android:title="View Webcam" 
+	  android:showAsAction="ifRoom|withText"
+	  />    
     <item android:id="@+id/action_background"
           android:icon="@drawable/abc_ic_go"
           android:title="Reset Background" 
