added script to run benFinder seizure detector.

--- a/kinect_version/benFinder/www/css/android.css
+++ b/kinect_version/benFinder/www/css/android.css
@@ -47,16 +47,20 @@ body {
 
 #header ul li:first-child a {
     -webkit-border-top-left-radius: 8px;
-    -webkit-border-top-right-radius: 8px
+    -webkit-border-top-right-radius: 8px;
 }
 #header ul li:last-child a {
     -webkit-border-bottom-left-radius: 8px;
-    -webkit-border-bottom-right-radius: 8px
+    -webkit-border-bottom-right-radius: 8px;
 }
 
 .imcap {
-    float:left
+    float:left;
 }
 .newline {
-    clear:both
+    clear:both;
+}
+
+.multiimg {
+    width: 300px;
 }
