--- a/pebble_version/Android_Pebble_SD/res/layout/main.xml
+++ b/pebble_version/Android_Pebble_SD/res/layout/main.xml
@@ -5,9 +5,16 @@
     android:layout_height="fill_parent"
     >
 <TextView  
+    android:id="@+id/textView1"
     android:layout_width="fill_parent" 
     android:layout_height="wrap_content" 
     android:text="Hello World, MainActivity"
+    />
+<Button  
+    android:id="@+id/button1"
+    android:layout_width="fill_parent" 
+    android:layout_height="wrap_content" 
+    android:text="Press Me"
     />
 </LinearLayout>
 
