Pebble now sends spectrum data in a number of packets to the android device.

--- a/pebble_version/Android_Pebble_SD/res/layout/main.xml
+++ b/pebble_version/Android_Pebble_SD/res/layout/main.xml
@@ -16,6 +16,12 @@
     android:layout_height="wrap_content" 
     android:text="textView2"
     />
+<TextView  
+    android:id="@+id/textView3"
+    android:layout_width="fill_parent" 
+    android:layout_height="wrap_content" 
+    android:text="textView3"
+    />
 <Button  
     android:id="@+id/button1"
     android:layout_width="fill_parent" 
