Added pebble prototype to 'useful pages' menu

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,13 +40,17 @@
             <h3>Useful Pages</h3>
 
             <ul>
-                <li>
+		<li>
 		  <i class="icon-link"></i>   
-		  <a href="{{site.baseurl}}/meta/2014/01/13/Digital_Video_Monitors/">Digital Video Monitors</a></li>
+		  <a href="{{site.baseurl}}/meta/2015/02/01/Pebble_Watch_Version/">Pebble Smart Watch Based Seizure Detector Prototype</a>
+		</li>
 		<li>
 		  <i class="icon-link"></i>   
 		  <a href="{{site.baseurl}}/meta/2014/01/13/Kinect_Seizure_Detector/">Kinect Based Seizure Detector Prototype</a>
 		</li>
+                <li>
+		  <i class="icon-link"></i>   
+		  <a href="{{site.baseurl}}/meta/2014/01/13/Digital_Video_Monitors/">Digital Video Monitors</a></li>
 		<li>
 		  <i class="icon-link"></i>   
 		  <a href="{{site.baseurl}}/meta/2014/02/21/Accelerometer_Version/">Accelerometer Based Seizure Detector Prototype</a>
@@ -68,7 +72,7 @@
 
         <footer>
             <hr />
-            <p>&copy; <time>2014</time> {{ site.author }}</p>
+            <p>&copy; <time>2015</time> {{ site.author }}</p>
         </footer>
 
 	<script type="text/javascript">
