Started to add code to stop server (not working yet!)

--- a/pebble_version/Android_Pebble_SD/res/layout/main.xml
+++ b/pebble_version/Android_Pebble_SD/res/layout/main.xml
@@ -1,38 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    >
-<TextView  
-    android:id="@+id/textView1"
-    android:layout_width="fill_parent" 
-    android:layout_height="wrap_content" 
-    android:text="textView1"
-    />
-<TextView  
-    android:id="@+id/textView2"
-    android:layout_width="fill_parent" 
-    android:layout_height="wrap_content" 
-    android:text="textView2"
-    />
-<TextView  
-    android:id="@+id/textView3"
-    android:layout_width="fill_parent" 
-    android:layout_height="wrap_content" 
-    android:text="textView3"
-    />
-<Button  
-    android:id="@+id/button1"
-    android:layout_width="fill_parent" 
-    android:layout_height="wrap_content" 
-    android:text="Press Me"
-    />
-<Button  
-    android:id="@+id/button2"
-    android:layout_width="fill_parent" 
-    android:layout_height="wrap_content" 
-    android:text="Start Web Server"
-    />
+	      android:orientation="vertical"
+	      android:layout_width="fill_parent"
+	      android:layout_height="fill_parent"
+	      >
+  <TextView  
+      android:id="@+id/textView1"
+      android:layout_width="fill_parent" 
+      android:layout_height="wrap_content" 
+      android:text="textView1"
+      />
+  <TextView  
+      android:id="@+id/textView2"
+      android:layout_width="fill_parent" 
+      android:layout_height="wrap_content" 
+      android:text="textView2"
+      />
+  <TextView  
+      android:id="@+id/textView3"
+      android:layout_width="fill_parent" 
+      android:layout_height="wrap_content" 
+      android:text="textView3"
+      />
+  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+		android:orientation="horizontal"
+		android:layout_width="fill_parent"
+		android:layout_height="fill_parent"
+		>
+    <Button  
+	android:id="@+id/button1"
+	android:layout_width="wrap_content" 
+	android:layout_height="wrap_content" 
+	android:text="Stop Web Server"
+	/>
+    <Button  
+	android:id="@+id/button2"
+	android:layout_width="wrap_content" 
+	android:layout_height="wrap_content" 
+	android:text="Start Web Server"
+	/>
+  </LinearLayout>
 </LinearLayout>
 
