--- a/pebble_version/Android_Pebble_SD/res/layout/main.xml
+++ b/pebble_version/Android_Pebble_SD/res/layout/main.xml
@@ -4,28 +4,87 @@
 	      android:layout_width="fill_parent"
 	      android:layout_height="fill_parent"
 	      >
-  <TextView  
-      android:id="@+id/textView1"
-      android:layout_width="fill_parent" 
-      android:layout_height="wrap_content" 
-      android:text="textView1"
-      />
-  <TextView  
-      android:id="@+id/textView2"
-      android:layout_width="fill_parent" 
-      android:layout_height="wrap_content" 
-      android:text="textView2"
-      />
-  <TextView  
-      android:id="@+id/textView3"
-      android:layout_width="fill_parent" 
-      android:layout_height="wrap_content" 
-      android:text="textView3"
-      />
+  
+  
   <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 		android:orientation="horizontal"
 		android:layout_width="fill_parent"
-		android:layout_height="fill_parent"
+		android:layout_height="wrap_content"
+		>
+    <TextView  
+	android:id="@+id/textView1"
+	android:layout_width="0dp" 
+	android:layout_height="wrap_content"
+	android:layout_weight="0.5"
+	android:text="textView1"
+	/>
+    <TextView  
+	android:id="@+id/textView2"
+	android:layout_width="0dp" 
+	android:layout_height="wrap_content" 
+	android:layout_weight="0.5"
+	android:text="textView2"
+	/>
+  </LinearLayout>
+
+  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+		android:orientation="horizontal"
+		android:layout_width="fill_parent"
+		android:layout_height="wrap_content"
+		>
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+		  android:orientation="vertical"
+		  android:layout_width="0dp"
+		  android:layout_height="wrap_content"
+		  android:layout_weight="0.5"
+		  >
+      <TextView  
+	  android:id="@+id/alarmTv"
+	  android:layout_width="wrap_content" 
+	  android:layout_height="wrap_content"
+	  android:text="alarmTv"
+	  android:textSize="32sp"
+	  />
+      <TextView  
+	  android:id="@+id/pebTimeTv"
+	  android:layout_width="wrap_content" 
+	  android:layout_height="wrap_content"
+	  android:text="pebTimeTv"
+	  />
+    </LinearLayout>
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+		  android:orientation="vertical"
+		  android:layout_width="0dp"
+		  android:layout_height="wrap_content"
+		  android:layout_weight="0.5"
+		  >
+
+      <TextView  
+	  android:id="@+id/pebbleTv"
+	  android:layout_width="wrap_content" 
+	  android:layout_height="wrap_content" 
+	  android:text="pebbleTv"
+	  />
+      <TextView  
+	  android:id="@+id/appTv"
+	  android:layout_width="wrap_content" 
+	  android:layout_height="wrap_content" 
+	  android:text="appTv"
+	  />
+      <TextView  
+	  android:id="@+id/battTv"
+	  android:layout_width="wrap_content" 
+	  android:layout_height="wrap_content" 
+	  android:text="battTv"
+	  />
+    </LinearLayout>
+  </LinearLayout>
+
+
+  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+		android:orientation="horizontal"
+		android:layout_width="fill_parent"
+		android:layout_height="wrap_content"
 		>
     <Button  
 	android:id="@+id/button1"
@@ -40,5 +99,6 @@
 	android:text="Start Web Server"
 	/>
   </LinearLayout>
+
 </LinearLayout>
 
