Added transfer of simplified spectrum between pebble watch and android phone.

--- a/pebble_version/Android_Pebble_SD/res/layout/main.xml
+++ b/pebble_version/Android_Pebble_SD/res/layout/main.xml
@@ -100,5 +100,12 @@
 	/>
   </LinearLayout>
 
+  <TextView  
+      android:id="@+id/debugTv"
+      android:layout_width="wrap_content" 
+      android:layout_height="wrap_content" 
+      android:text="battTv"
+      />
+
 </LinearLayout>
 
