Moved user interface buttons into action bar.

--- a/pebble_version/Android_Pebble_SD/res/menu/main_activity_actions.xml
+++ b/pebble_version/Android_Pebble_SD/res/menu/main_activity_actions.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
   <item android:id="@+id/action_start_stop"
-	android:icon="@drawable/start_server"
-	android:title="Start Server"
+	android:icon="@drawable/stop_server"
+	android:title="Stop Server"
 	android:showAsAction="never|withText"
 	/>
 
