--- a/pebble_version/Android_Pebble_SD/res/layout/main.xml
+++ b/pebble_version/Android_Pebble_SD/res/layout/main.xml
@@ -4,6 +4,12 @@
 	      android:layout_width="fill_parent"
 	      android:layout_height="fill_parent"
 	      >
+  <TextView  
+      android:id="@+id/versionTv"
+      android:layout_width="wrap_content" 
+      android:layout_height="wrap_content" 
+      android:text="Android OpenSeizureDetector Version x.xx"
+      />
   
   
   <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
