--- a/pebble_version/Android_Pebble_SD/res/layout/main.xml
+++ b/pebble_version/Android_Pebble_SD/res/layout/main.xml
@@ -94,5 +94,10 @@
       android:text="battTv"
       />
 
+ <com.github.mikephil.charting.charts.LineChart
+        android:id="@+id/chart1"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/seekBar1" />
 </LinearLayout>
 
