Added Cancel Audible button to seizure detector client app.

--- a/pebble_version/Android_SD_Client/res/layout/main.xml
+++ b/pebble_version/Android_SD_Client/res/layout/main.xml
@@ -86,7 +86,12 @@
     </LinearLayout>
   </LinearLayout>
 
-
+  <Button
+      android:id="@+id/cancelAudibleButton"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="Cancel Audible"
+      />
   <TextView  
       android:id="@+id/debugTv"
       android:layout_width="wrap_content" 
