--- a/pebble_version/Android_Pebble_SD/res/xml/prefs.xml
+++ b/pebble_version/Android_Pebble_SD/res/xml/prefs.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
     <CheckBoxPreference
+        android:key="AudibleFaultWarning"
+        android:title="Enable Audible System FaultWarnings"
+        android:summary="Issue an audible alarm if the system detects a fault (e.g. can not talk to Pebble)."
+        android:defaultValue="true" />
+    <CheckBoxPreference
         android:key="AudibleAlarm"
         android:title="Enable Audible Alarm"
         android:summary="Issue an audible alarm if the seizure detector enters an alarm condition."
