--- a/pebble_version/Android_SD_Client/res/menu/main_activity_actions.xml
+++ b/pebble_version/Android_SD_Client/res/menu/main_activity_actions.xml
@@ -5,6 +5,12 @@
 	android:showAsAction="never|withText"
 	/>
 
+  <item android:id="@+id/action_test_fault_warning_beep"
+	android:icon="@drawable/stop_server"
+	android:title="Test Fault Warning Beep"
+	android:showAsAction="never|withText"
+	/>
+
   <item android:id="@+id/action_test_alarm_beep"
 	android:icon="@drawable/stop_server"
 	android:title="Test Alarm Beep"
