--- a/pebble_version/Android_SD_Client/res/xml/client_prefs.xml
+++ b/pebble_version/Android_SD_Client/res/xml/client_prefs.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
     <CheckBoxPreference
+        android:key="AudibleFaultWarning"
+        android:title="Enable Audible Fault Warning"
+        android:summary="Issue an audible warning if the system detects a fault condition."
+        android:defaultValue="true" />
+    <CheckBoxPreference
         android:key="AudibleAlarm"
         android:title="Enable Audible Alarm"
         android:summary="Issue an audible alarm if the seizure detector enters an alarm condition."
