--- a/pebble_version/Android_SD_Client/res/xml/client_prefs.xml
+++ b/pebble_version/Android_SD_Client/res/xml/client_prefs.xml
@@ -22,6 +22,12 @@
 	android:numeric="integer"
         android:defaultValue="5" />
     <EditTextPreference
+        android:key="FaultTimerPeriod"
+        android:title="Fault Timer Duration (sec)"
+        android:summary="Duration that fault alarms are muted before initiating."
+	android:numeric="integer"
+        android:defaultValue="30" />
+    <EditTextPreference
         android:key="ServerIP"
         android:title="Server IP Addrss."
         android:summary="IP Address of OpenSeizureDetector Server (e.g. 192.168.1.175)."
