Modified android server app to send detector settings stored in android persistent storage to pebble app on start-up, and fixed problem with pebble app interpreting data.   No error checking to make sure the user enters Integers yet though!!!

--- a/pebble_version/Android_Pebble_SD/res/menu/main_activity_actions.xml
+++ b/pebble_version/Android_Pebble_SD/res/menu/main_activity_actions.xml
@@ -41,4 +41,12 @@
 	android:title="Settings"
 	android:showAsAction="never|withText"
 	/>
+
+<!--
+  <item android:id="@+id/action_watch_settings"
+	android:icon="@drawable/ic_action_settings"
+	android:title="Watch Settings"
+	android:showAsAction="never|withText"
+	/>
+  -->
 </menu>
