Modified OpenSeizureDetector Locator to use the Goole Play Location API rather than the old Location API, as this does not work on some new phones...

--- a/pebble_version/Android_Locator/res/xml/wayn_prefs.xml
+++ b/pebble_version/Android_Locator/res/xml/wayn_prefs.xml
@@ -14,7 +14,7 @@
         android:key="MessageText"
         android:title="Message Text"
         android:summary="Content of SMS Response (to which location is appended)."
-        android:defaultValue="WAYN Response:\n" />
+        android:defaultValue="OsdLocator Response:\n" />
     <CheckBoxPreference
         android:key="UseGPS"
         android:title="Use GPS Location"
