--- a/BenTv_Android/app/src/main/res/layout/activity_main.xml
+++ b/BenTv_Android/app/src/main/res/layout/activity_main.xml
@@ -7,10 +7,14 @@
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
     android:orientation="vertical">
 
-    <TextView android:text="Hello World!" android:layout_width="wrap_content"
+    <TextView android:text="BenTV" android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
     <SurfaceView
-        android:id="@+id/surfaceView"
+        android:id="@+id/surfaceView1"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent" />
+        android:layout_height="190dp" />
+    <SurfaceView
+        android:id="@+id/surfaceView2"
+        android:layout_width="fill_parent"
+        android:layout_height="201dp" />
 </LinearLayout>
